--- a/src/2-form.html
+++ b/src/2-form.html
@@ -33,6 +33,6 @@
         </div>
       </form>
     </div>
-    <script type="module" src="./js/2-form.js"></script>
+    <script type="module" src="js/2-form.js"></script>
   </body>
 </html>
