--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <a class="index-link" href="./index.html">Back</a>
     <div class="container">
       <ul class="gallery"></ul>
     </div>
