--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <a class="index-link" href="./index.html">Back</a>
     <div class="container">
       <form class="feedback-form" autocomplete="off">
         <div class="form-container">
