--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="container">
-      <ul>
-        <li><a href="./1-gallery.html">Gallery</a></li>
-        <li><a href="./2-form.html">Form</a></li>
+      <ul class="menu">
+        <li><a class="nav-bar" href="./1-gallery.html">Gallery</a></li>
+        <li><a class="nav-bar" href="./2-form.html">Form</a></li>
       </ul>
     </div>
   </body>
