--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-advancedjs-hw-01</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" src="./js/2-form.js"></script>
   </head>
   <body>
     <a class="index-link" href="./index.html">Back</a>
@@ -34,6 +35,5 @@
         </div>
       </form>
     </div>
-    <script type="module" src="js/2-form.js"></script>
   </body>
 </html>
